# ChangeLog for app-emacs/df-mode
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/df-mode/ChangeLog,v 1.1 2007/12/14 08:03:58 ulm Exp $

*df-mode-20050509 (14 Dec 2007)
*df-mode-1.5 (14 Dec 2007)

  14 Dec 2007; Ulrich Mueller <ulm@gentoo.org> +files/50df-gentoo.el,
  +files/50df-mode-gentoo.el, +metadata.xml, +df-mode-1.5.ebuild,
  +df-mode-20050509.ebuild:
  Package move from df to df-mode. Version bump; new upstream and HOMEPAGE.

  06 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  29 Sep 2005; Joseph Jezak <josejx@gentoo.org> df-1.5.ebuild:
  Marked ~ppc.

  01 Jul 2005; Matthew Kennedy <mkennedy@gentoo.org> df-1.5.ebuild:
  Keywording ~amd64.

*df-1.5 (31 Oct 2002)

  31 Oct 2002; Matthew Kennedy <mkennedy@gentoo.org> ChangeLog,
  df-1.5.ebuild, files/50df-gentoo.el, files/digest-df-1.5 :
  Initial import.