@@ -15,14 +15,14 @@ EBUILD df-mode-1.5.ebuild 544 RMD160 863830c60ee3e128adf5dda7dbf4333f4020830c SH
 MD5 1bf3f09cb1cb9d1ac5636acc400fa20d df-mode-1.5.ebuild 544
 RMD160 863830c60ee3e128adf5dda7dbf4333f4020830c df-mode-1.5.ebuild 544
 SHA256 18019b87468860ad7024aebe85e684cfaa0cebaa8aca0bdd13e6c4ccb7b6e816 df-mode-1.5.ebuild 544
-EBUILD df-mode-20050509.ebuild 829 RMD160 f338f3f4a0b8a35cd6f38fd08e0a7ea580511fb2 SHA1 9ac2f24fc4f85c35f365af5a3713539023dc81fd SHA256 7bca4bdefaba3f3bf60a3c5d3d39216ed7f25ae50aaaf654e707f3e3638b97f3
-MD5 5773dd595ef16866be7f66c81317457e df-mode-20050509.ebuild 829
-RMD160 f338f3f4a0b8a35cd6f38fd08e0a7ea580511fb2 df-mode-20050509.ebuild 829
-SHA256 7bca4bdefaba3f3bf60a3c5d3d39216ed7f25ae50aaaf654e707f3e3638b97f3 df-mode-20050509.ebuild 829
-MISC ChangeLog 946 RMD160 ccf67546876800b71ba8f46a47ca30cd4296d7ca SHA1 fbb6eabc55d9121706df624513afa3aa66abcb0f SHA256 76bb1d6e7fcbea0059b8d20edf5cba276243575437c5dd6147dd63102ea03f28
-MD5 e9f1346ebe73fd8882b29bf8546618fa ChangeLog 946
-RMD160 ccf67546876800b71ba8f46a47ca30cd4296d7ca ChangeLog 946
-SHA256 76bb1d6e7fcbea0059b8d20edf5cba276243575437c5dd6147dd63102ea03f28 ChangeLog 946
+EBUILD df-mode-20050509.ebuild 830 RMD160 c7a75f56c0d64ddee3bc8dd07f98b4503e74a753 SHA1 7cfd2c0faad07b2c1d775c478e039f46e26a9274 SHA256 e301ef67f3eb20c699d2a621e57fd8c5f81bccb94b9467b335f369364be9aadc
+MD5 4409b5a6b006948ef6062617ab9e41c9 df-mode-20050509.ebuild 830
+RMD160 c7a75f56c0d64ddee3bc8dd07f98b4503e74a753 df-mode-20050509.ebuild 830
+SHA256 e301ef67f3eb20c699d2a621e57fd8c5f81bccb94b9467b335f369364be9aadc df-mode-20050509.ebuild 830
+MISC ChangeLog 1056 RMD160 7a7c8c148b56cc1842ff0278862392d4ce1a1fa6 SHA1 9ae2ec5d1d46a9c56164693387915d96d6dc765c SHA256 575dff88a56e8ab65e71247551e73fc6c6e47201ca510720ec3b8ec202e4c47d
+MD5 e5446e8a1690d74bb69fe38bfb132552 ChangeLog 1056
+RMD160 7a7c8c148b56cc1842ff0278862392d4ce1a1fa6 ChangeLog 1056
+SHA256 575dff88a56e8ab65e71247551e73fc6c6e47201ca510720ec3b8ec202e4c47d ChangeLog 1056
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
@@ -34,9 +34,9 @@ MD5 42a405c23090578d3e5a5f37dce9a9f3 files/digest-df-mode-20050509 244
 RMD160 d6f26f14eab7e33f56d9e74b9c4fce5e3b8c1045 files/digest-df-mode-20050509 244
 SHA256 347119cd352ca8826fdacc3aded39e22fc45aaec8b7d5d7338444a3c2341ff4e files/digest-df-mode-20050509 244
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.7 (GNU/Linux)
+Version: GnuPG v2.0.7 (GNU/Linux)
 
-iD8DBQFHYjkPOeoy/oIi7uwRAop+AJwK0ShdsxWXU5Uah0ArgXPQaY2OAACfTadw
-X8qj211KIPq6H098nT5dR/s=
-=5y6M
+iD8DBQFHiqBsNQqtfCuFneMRAmqfAJ9Lj5kabfbED+iIAOcM8Q/KDBHhowCeOa5c
+vnTTv1sTTO5/iekZna2ArLY=
+=Ml/T
 -----END PGP SIGNATURE-----
