@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 51haskell-mode-gentoo.el 87 RMD160 8c7556ebce407536a20aae21027f5a894813502b SHA1 9ddca5313da1124c0fd14774ae88e0393eb3324a SHA256 901f8981ef9fc55a2d4a1022551818a120e9fd4579b9c65ba690c7f75303ea96
 MD5 7f06ca36e170b32ecad098fd3ae10e1d files/51haskell-mode-gentoo.el 87
 RMD160 8c7556ebce407536a20aae21027f5a894813502b files/51haskell-mode-gentoo.el 87
@@ -8,14 +11,14 @@ EBUILD haskell-mode-2.3.ebuild 786 RMD160 855d4da5855f36f7f5dadd800f02fb838df6aa
 MD5 bf5ad6ec3331430a5004587c26512eb5 haskell-mode-2.3.ebuild 786
 RMD160 855d4da5855f36f7f5dadd800f02fb838df6aaaa haskell-mode-2.3.ebuild 786
 SHA256 9b640eb306082f837c1103c6df53bb4ef677488382a449c8f41be8f797c4c171 haskell-mode-2.3.ebuild 786
-EBUILD haskell-mode-2.4.ebuild 866 RMD160 a7b6a8ff0e7dbd8c00cd261d8ec8922b2cb41615 SHA1 e382d37d5730f08f243785c51c4c660c422d88e7 SHA256 87b81beb9dcecd6235a60b0f1169127f64e9fc2fae9fbaaa644fcd7aac9abd35
-MD5 b9ea20b11bae96b8605219adbc3fe024 haskell-mode-2.4.ebuild 866
-RMD160 a7b6a8ff0e7dbd8c00cd261d8ec8922b2cb41615 haskell-mode-2.4.ebuild 866
-SHA256 87b81beb9dcecd6235a60b0f1169127f64e9fc2fae9fbaaa644fcd7aac9abd35 haskell-mode-2.4.ebuild 866
-MISC ChangeLog 4468 RMD160 51932843980311530877032fd3b5a93eb03a21ad SHA1 36bcc675b5f80d5a55bff36ca232a2ceb756d568 SHA256 61812b361cd6c44398d5fa1072823060e1c7cbab286fe7e5ecb9c128f4fdf259
-MD5 ec80e9b937a2d42a1c2c90ffc1285786 ChangeLog 4468
-RMD160 51932843980311530877032fd3b5a93eb03a21ad ChangeLog 4468
-SHA256 61812b361cd6c44398d5fa1072823060e1c7cbab286fe7e5ecb9c128f4fdf259 ChangeLog 4468
+EBUILD haskell-mode-2.4.ebuild 864 RMD160 e65035594ebf0d7abb0cdc10305c294a23f6887b SHA1 44fced6a86e3a3a3eab42f1ed3e1064bf1183e6a SHA256 d20d9a08fd8961e947ed3ca1109a58251e490d22f7d4076fbb6482837963b630
+MD5 eb11b78f9fdb3536d61cf584221a1850 haskell-mode-2.4.ebuild 864
+RMD160 e65035594ebf0d7abb0cdc10305c294a23f6887b haskell-mode-2.4.ebuild 864
+SHA256 d20d9a08fd8961e947ed3ca1109a58251e490d22f7d4076fbb6482837963b630 haskell-mode-2.4.ebuild 864
+MISC ChangeLog 4575 RMD160 d7d3dabc48f0a5442290256692658bdb9efc2673 SHA1 66249eeb20f5adde92fe2fdcba02b207169eadd7 SHA256 da0db6d8a77cd57a88aae60989aa6f5b84bd58d3f7d383581993633c2af10512
+MD5 0d5c58df1a45d7c704525d2485cec1f0 ChangeLog 4575
+RMD160 d7d3dabc48f0a5442290256692658bdb9efc2673 ChangeLog 4575
+SHA256 da0db6d8a77cd57a88aae60989aa6f5b84bd58d3f7d383581993633c2af10512 ChangeLog 4575
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
@@ -26,3 +29,10 @@ SHA256 8c0fdec19a7a0a86233a604ce83ee315cd1c89202dc0e40fb0edbd44e30b0dcd files/di
 MD5 d77314114eec85f5f31ab417018e62e0 files/digest-haskell-mode-2.4 247
 RMD160 9d25c86252e0be43d72fa3e51a53b89232000693 files/digest-haskell-mode-2.4 247
 SHA256 e9c88ee93444e9e3017afcee8165bd286f9fe5508a3706327e8dc8875cfc9dda files/digest-haskell-mode-2.4 247
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.7 (GNU/Linux)
+
+iD8DBQFHiqExNQqtfCuFneMRAu4QAJ0UlwjDpAx75lLh45UMh9iT2afjfACeMyVt
+iDC/+WyCf4NloM9xr/+TXvk=
+=yy7d
+-----END PGP SIGNATURE-----
