@@ -1,6 +1,10 @@
 # ChangeLog for app-emacs/df-mode
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/df-mode/ChangeLog,v 1.1 2007/12/14 08:03:58 ulm Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/df-mode/ChangeLog,v 1.2 2008/01/13 23:35:44 opfer Exp $
+
+  13 Jan 2008; Christian Faulhammer <opfer@gentoo.org>
+  df-mode-20050509.ebuild:
+  stable x86, bug 205551
 
 *df-mode-20050509 (14 Dec 2007)
 *df-mode-1.5 (14 Dec 2007)
